# dictea

./: .gitignore  Cargo.toml  Makefile  README.md  SPECS.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
src/: main.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: microphone.rs  mod.rs
src-tauri/src/pipeline/: mod.rs  realtime.rs
src-tauri/src/stt/: engine.rs  gemini.rs  groq.rs  mod.rs  openai.rs  voxtral.rs
src/audio/: microphone.rs  mod.rs
src/ipc/: commands.rs  mod.rs
src/pipeline/: mod.rs  realtime.rs
src/stt/: engine.rs  mod.rs  voxtral.rs  whisper.rs
ui/: App.tsx  styles.css  types.ts
ui/components/: OverlayView.tsx  SettingsView.tsx  Sidebar.tsx  Toast.tsx
ui/components/pages/: DictationPage.tsx  EnginePage.tsx  SettingsPage.tsx  ShortcutPage.tsx
ui/hooks/: useAudioDevices.ts  useConfig.ts  useUpdater.ts
ui/i18n/: I18nContext.ts  index.ts  translations.ts
